# arxiv-dl

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
arxiv_dl/: arxiv_dl.py  dl_utils.py  helpers.py  logger.py  models.py  scrapers.py  target_parser.py  updater.py
src/arxiv_dl/: __init__.py  __main__.py  constants.py  dl_utils.py  helpers.py  printer.py  scrapers.py  target_parser.py  updater.py
tests/: test_arxiv_id_validator.py  test_cli.py  test_huggingface_targets.py  test_process_arxiv_target.py  test_process_cvf_target.py  test_process_nips_target.py  test_scrape_cvf.py  test_scrape_ecva_target.py
