[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "arxiv-dl"
version = "1.3.1"
authors = [{ name = "Mark He Huang", email = "dev@markhh.com" }]
license = "MIT"
license-files = ["LICENSE"]
description = "Command-line Papers Downloader. Citation extraction and PDF naming automation."
keywords = [
    "arxiv",
    "paper",
    "downloader",
    "CVPR",
    "ICCV",
    "ECCV",
    "WACV",
    "CVF",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.optional-dependencies]
dev = ["check-manifest", "pytest", "tox", "black", "isort"]

[project.scripts]
paper = "arxiv_dl.__main__:cli"
getpaper = "arxiv_dl.__main__:cli"
arxiv-dl = "arxiv_dl.__main__:cli"

[project.urls]
Homepage = "https://github.com/MarkHershey/arxiv-dl"
Issues = "https://github.com/MarkHershey/arxiv-dl/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
